--- a/NuGet.Config
+++ b/NuGet.Config
@@ -8,5 +8,6 @@
     <clear />
 
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="ImageSharp Nightly" value="https://www.myget.org/F/sixlabors/api/v3/index.json" />
   </packageSources>
 </configuration>
