--- a/tests/NetVips.Benchmarks/NetVips.Benchmarks.csproj
+++ b/tests/NetVips.Benchmarks/NetVips.Benchmarks.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
     <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="7.13.1" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-dev002724" />
     <PackageReference Include="SkiaSharp" Version="1.68.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
